# sherpa-ai-onboarding

./: .gitignore  Assistant.py  main.py  prompts.py  pyproject.toml  requirements.txt  ui.py
data/: emp.py
data/vectorstore/: chroma.sqlite3
